--- a/dataimport.html
+++ b/dataimport.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="lib/d3.v6.min.js"></script>
@@ -67,8 +67,8 @@
         </div>
         <script type="text/javascript" src="scripts/quicktable.js"></script>
         <script>
-            document.getElementById("submit").addEventListener("click", function() {
-              var input = document.getElementById("date").value;
+            $("#submit").on("click", function() {
+              var input = $("#date").val();
               var dateEntered = new Date(input);
               console.log(input);
               console.log(dateEntered);
