--- a/graphview.html
+++ b/graphview.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <title>Image Carousel</title>
+    <title>D3 Filter Graph View</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/daterangepicker.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="lib/moment.min.js"></script>
+    <script type="text/javascript" src="lib/daterangepicker.js"></script>
     <script type="text/javascript" src="lib/d3.v6.min.js"></script>
     <script type="text/javascript" src="scripts/forcegraph.js"></script>
     </head>
@@ -38,16 +41,40 @@
             </div>
             <div class="row m-3">
                 <div class="col-lg-12">
-                    <div id="linkGraph"></div>
-                    <br>
                     <span id="datepicker" style="display: none;">
-                        <strong>Choose a date:&nbsp;</strong>
-                        <input type="date" id="date" name="date">&nbsp;
-                        <button id="submit">Apply</button>
+                        <label for="datefilter">Date Range:</label>
+                        <input type="text" name="datefilter" id="datefilter" value="Select a Date Range ..." style="width:25%;">
+                        <span><button id="updateGraph" type="button" class="btn btn-info">Update Graph</button></span>
                     </span>
+                    <br>
+                    <span id="startDate" style="display: none;"></span>
+                    <span id="endDate" style="display: none;"></span>
+                    <div id="linkGraph"></div>
                 </div>
             </div>
         </div>
         <script type="text/javascript" src="scripts/quickgraph.js"></script>
+        <script type="text/javascript">
+            $(function() {
+
+            $('input[name="datefilter"]').daterangepicker({
+                autoUpdateInput: false,
+                locale: {
+                    cancelLabel: 'Clear'
+                }
+            });
+
+            $('input[name="datefilter"]').on('apply.daterangepicker', function(e, picker) {
+                $(this).val(picker.startDate.format('MM/DD/YYYY') + ' - ' + picker.endDate.format('MM/DD/YYYY'));
+                document.getElementById("startDate").innerHTML = picker.startDate.format("YYYY-MM-DD").toString();
+                document.getElementById("endDate").innerHTML = picker.endDate.format("YYYY-MM-DD").toString();
+            });
+
+            $('input[name="datefilter"]').on('cancel.daterangepicker', function(e, picker) {
+                $(this).val('');
+            });
+
+            });
+        </script>
     </body>
 </html>
